--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
         <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>       
     </section>
+    <audio class="hidden" id="audioPlayer" controls>
+        <source id="audioSource" src="" type="audio/mp3">
+        Votre navigateur ne supporte pas l'élément audio.
+    </audio>
 <script src="./public/js/main.js"></script>
 </body>
 </html>
